--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div>
     </div>
     
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var startTime = 0;
       var stopTime = 0;
