Remove ellipsis from the initial HTML
They cause a flash when loading the page.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       </div>
       <div id="current-song-container">
         <div>
-          <span id="current-song-title">...</span><span id="current-song-votes"></span>
+          <span id="current-song-title"></span><span id="current-song-votes"></span>
         </div>
         <div>
-          <span id="current-song-artist">...</span>
+          <span id="current-song-artist"></span>
         </div>
         <div id="progress-bar">
           <div id="progress-bar-fill">
